; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4state.c_nfs_state_lock_state_matches_stateid.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4state.c_nfs_state_lock_state_matches_stateid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs4_state = type { i32, i32 }

@LK_STATE_IN_USE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfs4_state*, i32*)* @nfs_state_lock_state_matches_stateid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfs_state_lock_state_matches_stateid(%struct.nfs4_state* %0, i32* %1) #0 {
  %3 = alloca %struct.nfs4_state*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.nfs4_state* %0, %struct.nfs4_state** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* @LK_STATE_IN_USE, align 4
  %7 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %8 = getelementptr inbounds %struct.nfs4_state, %struct.nfs4_state* %7, i32 0, i32 1
  %9 = call i64 @test_bit(i32 %6, i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %24

11:                                               ; preds = %2
  %12 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %13 = getelementptr inbounds %struct.nfs4_state, %struct.nfs4_state* %12, i32 0, i32 0
  %14 = call i32 @spin_lock(i32* %13)
  %15 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @nfs_state_find_lock_state_by_stateid(%struct.nfs4_state* %15, i32* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %11
  store i32 1, i32* %5, align 4
  br label %20

20:                                               ; preds = %19, %11
  %21 = load %struct.nfs4_state*, %struct.nfs4_state** %3, align 8
  %22 = getelementptr inbounds %struct.nfs4_state, %struct.nfs4_state* %21, i32 0, i32 0
  %23 = call i32 @spin_unlock(i32* %22)
  br label %24

24:                                               ; preds = %20, %2
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i64 @nfs_state_find_lock_state_by_stateid(%struct.nfs4_state*, i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
